src/tests/snapshots/nyx__tests__window_opening__check_target_output_and_workspace@fsT-wfsA1-spB2.snap
---
source: src/tests/window_opening.rs
assertion_line: 434
description: "want fullscreen: A1\nset parent: B2\nconfig:\noutput \"headless-2\" {\n    layout {\n        border {\n            on\n        }\n    }\n}\n\nworkspace \"ws-1\" {\n    open-on-output \"headless-1\"\n}\n\nworkspace \"ws-2\" {\n    open-on-output \"headless-2\"\n\n    layout {\n        border {\n            width 10\n        }\n\n        default-column-width {\n            fixed 500\n        }\n    }\n}\n\nwindow-rule {\n    exclude title=\"parent\"\n\n    open-fullscreen true\n}\n\nwindow-rule {\n    match title=\"parent\"\n    open-on-output \"headless-2\"\n}"
expression: snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 1920 × 1080, bounds: 1900 × 1060, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]
size: 1920 × 1080, bounds: 1900 × 1060, states: [Fullscreen]

unfullscreen configure:
size: 0 × 0, bounds: 1900 × 1060, states: []
